--- a/covid19-vis.Rmd
+++ b/covid19-vis.Rmd
@@ -221,7 +221,7 @@ ma.testing<-select(ma.gov,date,contains("Test_")) %>%
 ggplot(ma.testing)+aes(date,delta,group=result,fill=result)+
 	geom_bar(stat='identity',position = 'stack',width=1,color='black')+
 	scale_y_continuous(breaks=pretty_breaks())+
-	scale_x_date(breaks="3 days",date_labels = "%b-%d")+
+	scale_x_date(breaks="7 days",date_labels = "%b-%d")+
 	labs(y="Tests in MA per day")
 
 ```
@@ -265,7 +265,7 @@ To date, MA.gov has reported gender as "Female", "Male", or "unknown" only.
 ma.deaths<-suppressMessages(
 	read_csv('https://raw.githubusercontent.com/b-lev/massachusetts-covid19-report-archive/master/deaths.csv')
 )%>%
-	mutate(date=ymd(date))
+	mutate(date=myd(date))
 
 tmp<- bind_rows(ma.deaths %>% group_by(var=gender) %>% summarize(val=n())  %>% mutate(type='deaths'),
 								select(ma.gov,date,contains('Gender_'))  %>% filter(date==max(date)) %>%
